--- a/index.html
+++ b/index.html
@@ -3,9 +3,63 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>WEB-OS</title>
+  <title>At Sopze's</title>
+  <!-- BOOTSTRAP CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+  <!-- PAGE CSS -->
+  <link rel="stylesheet" href="./.data/styles.css">
 </head>
 <body>
-  <div>Hello World</div>
+  <!-- HEADER -->
+  <div class="navbar sticky-top navbar-expand-lg bg-body-secondary">
+    <div class="container-fluid">
+      <img class="navbar-brand" width="50px" src="./resources/svg/sopze_logo_color.svg"></img>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="nav nav-pills p-0 mb-0 ms-auto me-0">
+          <li class="nav-item" role="presentation">
+            <button class="nav-link active" id="tab-btn-home" data-bs-toggle="tab" data-bs-target="#tab-content-home" type="button" role="tab" aria-controls="tab-home" aria-selected="true">Home</button>
+          </li>
+          <li class="nav-item" role="presentation">
+            <button class="nav-link" id="tab-btn-aboutme" data-bs-toggle="tab" data-bs-target="#tab-content-aboutme" type="button" role="tab" aria-controls="tab-aboutme">About me</button>
+          </li>
+          <li class="nav-item" role="presentation">
+            <button class="nav-link" id="tab-btn-portfolio" data-bs-toggle="tab" data-bs-target="#tab-content-portfolio" type="button" role="tab" aria-controls="tab-portfolio">Portfolio</button>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </div>
+    
+  <!-- CONTENT // TABS -->
+  <div class="tab-content">
+    <div class="container-fluid">
+      <div class="tab-pane fade show active" id="tab-content-home" role="tabpanel" aria-labelledby="tab-home" tabindex="0">
+        Home
+      </div>
+      <div class="tab-pane fade" id="tab-content-aboutme" role="tabpanel" aria-labelledby="tab-aboutme" tabindex="0">
+        About me
+      </div>
+      <div class="tab-pane fade" id="tab-content-portfolio" role="tabpanel" aria-labelledby="tab-portfolio" tabindex="0">
+        Portfolio
+      </div>
+    </div>
+  </div>
+  
+  <!-- FOOTER -->
+  <nav class="navbar bg-body-secondary">
+    <div class="container-fluid flex-column m-auto">
+      <p class="fs-1 fw-bold">At Sopze's</p>
+      <p class="fs-5">© 2022-2024 · Sergio '<b>Sopze</b>' del Pino Arroyo · <a href="mailto:sergiodepa92@gmail.com" target="_blank">SergioDepa92@gmail.com</a></p>
+      <p class="fs-5">· Created and designed by <b>Sopze</b> · Powered by <b>Github</b> & <b>Bootstrap</b> ·</p>
+    </div>
+  </nav>
+
+  <!-- BOOTSTRAP JS -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+  <!-- PAGE JS -->
+  <script src="./.data/app.js"></script>
 </body>
 </html>
