--- a/index.html
+++ b/index.html
@@ -3,22 +3,28 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="shortcut icon" href="./.data/favicon.ico" type="image/x-icon">
   <title>At Sopze's</title>
-  <!-- BOOTSTRAP CSS -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+  <!-- GOOGLE FONTS -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Syne:wght@400;600;700&family=Kanit:wght@200;300;400;500;700&family=Share+Tech+Mono&display=swap" rel="stylesheet"> 
   <!-- PAGE CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   <link rel="stylesheet" href="./.data/styles.css">
 </head>
 <body>
+  
   <!-- HEADER -->
-  <div class="navbar sticky-top navbar-expand-lg bg-body-secondary">
+  <div class="navbar sticky-top navbar-expand-lg section-dark p-2">
     <div class="container-fluid">
-      <img class="navbar-brand" width="50px" src="./resources/svg/sopze_logo_color.svg"></img>
+      <img id="brand-img" class="navbar-brand no-select" src="./resources/svg/icon.svg"></img>
+      <p id="brand-text" class="fs-1 p-2 fw-bold no-select">At Sopze's</p>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="nav nav-pills p-0 mb-0 ms-auto me-0">
+      <!--   <ul class="nav nav-pills p-0 mb-0 ms-auto me-0">
           <li class="nav-item" role="presentation">
             <button class="nav-link active" id="tab-btn-home" data-bs-toggle="tab" data-bs-target="#tab-content-home" type="button" role="tab" aria-controls="tab-home" aria-selected="true">Home</button>
           </li>
@@ -28,38 +34,38 @@
           <li class="nav-item" role="presentation">
             <button class="nav-link" id="tab-btn-portfolio" data-bs-toggle="tab" data-bs-target="#tab-content-portfolio" type="button" role="tab" aria-controls="tab-portfolio">Portfolio</button>
           </li>
-        </ul>
+        </ul> -->
       </div>
     </div>
   </div>
-    
+
   <!-- CONTENT // TABS -->
-  <div class="tab-content">
-    <div class="container-fluid">
-      <div class="tab-pane fade show active" id="tab-content-home" role="tabpanel" aria-labelledby="tab-home" tabindex="0">
-        Home
-      </div>
-      <div class="tab-pane fade" id="tab-content-aboutme" role="tabpanel" aria-labelledby="tab-aboutme" tabindex="0">
-        About me
-      </div>
-      <div class="tab-pane fade" id="tab-content-portfolio" role="tabpanel" aria-labelledby="tab-portfolio" tabindex="0">
-        Portfolio
+  <div class="container-fluid">
+    <div class="tab-content">
+      <div class="tab-pane fade show active d-flex" id="tab-content-home" role="tabpanel" aria-labelledby="tab-home" tabindex="-1">
+        <div class="row w-100">
+          <div class="col-12 col-md-10 mx-auto mt-5 border-top pt-6">
+            <div id="home-title-container" class="d-flex justify-content-center w-100">
+              <img width="60%" src="./resources/svg/full-logo.svg"/>
+            </div>
+            <p class="mono text-center fs-1c fsp-2 ts-bottom m-6 border-top border-bottom p-4 no-select">Artist · Programmer · Developer · Gamer</p>
+          </div>
+        </div>
       </div>
     </div>
   </div>
   
   <!-- FOOTER -->
-  <nav class="navbar bg-body-secondary">
-    <div class="container-fluid flex-column m-auto">
-      <p class="fs-1 fw-bold">At Sopze's</p>
-      <p class="fs-5">© 2022-2024 · Sergio '<b>Sopze</b>' del Pino Arroyo · <a href="mailto:sergiodepa92@gmail.com" target="_blank">SergioDepa92@gmail.com</a></p>
-      <p class="fs-5">· Created and designed by <b>Sopze</b> · Powered by <b>Github</b> & <b>Bootstrap</b> ·</p>
+  <nav id="page-footer" class="navbar section-dark w-100 m-0">
+    <div class="container-fluid flex-column m-auto no-select">
+      <p class="fs-1c fw-bold">At Sopze's</p>
+      <p class="fs-4">© 2022-2024 · Sergio '<b>Sopze</b>' del Pino Arroyo · Spain · <a href="mailto:sergiodepa92@gmail.com" target="_blank" rel="noopener noreferrer">SergioDepa92@gmail.com</a></p>
+      <p class="fs-4">· Created and designed by <b>Sopze</b> · Powered by <b>Github</b> + custom <b>Bootstrap</b> ·</p>
     </div>
   </nav>
 
-  <!-- BOOTSTRAP JS -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
   <!-- PAGE JS -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
   <script src="./.data/app.js"></script>
 </body>
 </html>
