--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="shortcut icon" href="./.data/favicon.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="./data/favicon.ico" type="image/x-icon">
   <title>At Sopze's</title>
   <!-- GOOGLE FONTS -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -11,7 +11,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Syne:wght@400;600;700&family=Kanit:wght@200;300;400;500;700&family=Share+Tech+Mono&display=swap" rel="stylesheet"> 
   <!-- PAGE CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-  <link rel="stylesheet" href="./.data/styles.css">
+  <link rel="stylesheet" href="./data/styles.css">
 </head>
 <body>
   
@@ -24,7 +24,7 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <!--   <ul class="nav nav-pills p-0 mb-0 ms-auto me-0">
+<!--         <ul class="nav nav-pills p-0 mb-0 ms-auto me-0">
           <li class="nav-item" role="presentation">
             <button class="nav-link active" id="tab-btn-home" data-bs-toggle="tab" data-bs-target="#tab-content-home" type="button" role="tab" aria-controls="tab-home" aria-selected="true">Home</button>
           </li>
@@ -66,6 +66,6 @@
 
   <!-- PAGE JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-  <script src="./.data/app.js"></script>
+  <script src="./data/app.js"></script>
 </body>
 </html>
