--- a/index.html
+++ b/index.html
@@ -14,56 +14,42 @@
   <link rel="stylesheet" href="./data/styles.css">
 </head>
 <body>
-  
   <!-- HEADER -->
-  <div class="navbar sticky-top navbar-expand-lg section-dark p-2">
+  <div id="header-container" class="navbar sticky-top section-dark p-0 pt-4 m-0">
     <div class="container-fluid">
-      <img id="brand-img" class="navbar-brand no-select" src="./resources/svg/icon.svg"></img>
-      <p id="brand-text" class="fs-1 p-2 fw-bold no-select">At Sopze's</p>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-<!--         <ul class="nav nav-pills p-0 mb-0 ms-auto me-0">
-          <li class="nav-item" role="presentation">
-            <button class="nav-link active" id="tab-btn-home" data-bs-toggle="tab" data-bs-target="#tab-content-home" type="button" role="tab" aria-controls="tab-home" aria-selected="true">Home</button>
-          </li>
-          <li class="nav-item" role="presentation">
-            <button class="nav-link" id="tab-btn-aboutme" data-bs-toggle="tab" data-bs-target="#tab-content-aboutme" type="button" role="tab" aria-controls="tab-aboutme">About me</button>
-          </li>
-          <li class="nav-item" role="presentation">
-            <button class="nav-link" id="tab-btn-portfolio" data-bs-toggle="tab" data-bs-target="#tab-content-portfolio" type="button" role="tab" aria-controls="tab-portfolio">Portfolio</button>
-          </li>
-        </ul> -->
-      </div>
-    </div>
-  </div>
-
-  <!-- CONTENT // TABS -->
-  <div class="container-fluid">
-    <div class="tab-content">
-      <div class="tab-pane fade show active d-flex" id="tab-content-home" role="tabpanel" aria-labelledby="tab-home" tabindex="-1">
-        <div class="row w-100">
-          <div class="col-12 col-md-10 mx-auto mt-5 border-top pt-6">
-            <div id="home-title-container" class="d-flex justify-content-center w-100">
-              <img width="60%" src="./resources/svg/full-logo.svg"/>
-            </div>
-            <p class="mono text-center fs-1c fsp-2 ts-bottom m-6 border-top border-bottom p-4 no-select">Artist · Programmer · Developer · Gamer</p>
-          </div>
+      <div class="row w-100 d-flex justify-content-between">
+        <div class="col-11">
+          <ul class="nav p-0 mb-0">
+            <li class="nav-item" role="presentation">
+              <button class="nav-link fs-4 fw-bold p-0 py-1 header-tab-item" id="tab-btn-home" tab="home" type="button">Home</button>
+            </li>
+            <li class="nav-item" role="presentation">
+              <button class="nav-link fs-4 fw-bold p-0 py-1 header-tab-item" id="tab-btn-portfolio" tab="portfolio" type="button">Portfolio</button>
+            </li>
+            <li class="nav-item" role="presentation">
+              <button class="nav-link fs-4 fw-bold p-0 py-1 header-tab-item" id="tab-btn-aboutme" tab="aboutme" type="button">About me</button>
+            </li>
+            <li class="nav-item" role="presentation">
+              <button class="nav-link fs-4 fw-bold p-0 py-1 header-tab-item" id="tab-btn-resumee" tab="resumee" type="button">Resumee</button>
+            </li>
+          </ul>
+        </div>
+        <div class="col-1 d-flex justify-content-center position-relative">
+          <img id="brand-img" class="navbar-brand no-select" src="./resources/svg/icon.svg"></img>
         </div>
       </div>
     </div>
   </div>
-  
+  <!-- CONTENT -->
+  <div id="tab-container" class="container-fluid"></div>
   <!-- FOOTER -->
   <nav id="page-footer" class="navbar section-dark w-100 m-0">
     <div class="container-fluid flex-column m-auto no-select">
       <p class="fs-1c fw-bold">At Sopze's</p>
-      <p class="fs-4">© 2022-2024 · Sergio '<b>Sopze</b>' del Pino Arroyo · Spain · <a href="mailto:sergiodepa92@gmail.com" target="_blank" rel="noopener noreferrer">SergioDepa92@gmail.com</a></p>
-      <p class="fs-4">· Created and designed by <b>Sopze</b> · Powered by <b>Github</b> + custom <b>Bootstrap</b> ·</p>
+      <p class="fs-4c">© 2022-2024 · Sergio '<b>Sopze</b>' del Pino Arroyo · Spain · <a href="mailto:sergiodepa92@gmail.com" target="_blank" rel="noopener noreferrer">SergioDepa92@gmail.com</a></p>
+      <p class="fs-4c">· Created and designed by <b>Sopze</b> · Powered by <b>Github</b> + custom <b>Bootstrap</b> ·</p>
     </div>
   </nav>
-
   <!-- PAGE JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
   <script src="./data/app.js"></script>
