cleaner js + functional builder and tabs

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="shortcut icon" href="./data/favicon.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="./resources/img/favicon.ico" type="image/x-icon">
   <title>At Sopze's</title>
   <!-- GOOGLE FONTS -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -11,12 +11,12 @@
   <link href="https://fonts.googleapis.com/css2?family=Syne:wght@400;600;700&family=Kanit:wght@200;300;400;500;700&family=Share+Tech+Mono&display=swap" rel="stylesheet"> 
   <!-- PAGE CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-  <link rel="stylesheet" href="./data/styles.css">
+  <link rel="stylesheet" href="./resources/css/styles.css">
 </head>
 <body>
   <!-- HEADER -->
   <div id="header-container" class="navbar sticky-top section-dark p-0 pt-4 m-0">
-    <div class="container-fluid">
+    <div class="container-fluid pe-0">
       <div class="row w-100 d-flex justify-content-between">
         <div class="col-11">
           <ul class="nav p-0 mb-0">
@@ -34,8 +34,8 @@
             </li>
           </ul>
         </div>
-        <div class="col-1 d-flex justify-content-center position-relative">
-          <img id="brand-img" class="navbar-brand no-select" src="./resources/svg/icon.svg"></img>
+        <div class="col-1 d-flex justify-content-end position-relative">
+          <img id="brand-img" class="navbar-brand no-select" src="./resources/img/icon.svg"></img>
         </div>
       </div>
     </div>
@@ -47,11 +47,12 @@
     <div class="container-fluid flex-column m-auto no-select">
       <p class="fs-1c fw-bold">At Sopze's</p>
       <p class="fs-4c">© 2022-2024 · Sergio '<b>Sopze</b>' del Pino Arroyo · Spain · <a href="mailto:sergiodepa92@gmail.com" target="_blank" rel="noopener noreferrer">SergioDepa92@gmail.com</a></p>
-      <p class="fs-4c">· Created and designed by <b>Sopze</b> · Powered by <b>Github</b> + custom <b>Bootstrap</b> ·</p>
+      <p class="fs-4c">· Created and designed by <b>Sopze</b> · Powered by <b>Github</b> using custom <b>Bootstrap</b> + vanilla <b>JavaScript</b> ·</p>
     </div>
   </nav>
   <!-- PAGE JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-  <script src="./data/app.js"></script>
+  <script src="./resources/js/htmlbuilder.js"></script>
+  <script src="./resources/js/app.js"></script>
 </body>
 </html>
