--- a/portfolio.html
+++ b/portfolio.html
@@ -1,1 +1,1 @@
-<!DOCTYPE html><html><head><script>window.location.assign(`${window.location.origin}/?portfolio`)</script></head></html>
+<!DOCTYPE html><html><head><script>window.location.assign(`${window.location.origin}?portfolio`)</script></head></html>
