--- a/resources/html/tab-home.html
+++ b/resources/html/tab-home.html
@@ -7,15 +7,15 @@
         <div id="home-title" class="d-flex justify-content-center show-over-md no-select">
           <img id="home-title-3D" src="./resources/img/title-bg.webp"/>
           <div id="home-title-bg">
-            <img width="60%" src="./resources/svg/full-logo.svg"/>
+            <img width="60%" src="./resources/img/full-logo.svg"/>
           </div>
         </div>
         <!-- simple title -->
         <div id="home-title" class="d-flex justify-content-center w-100 show-until-md">
           <img id="home-title-3D" src="./resources/img/title-bg.webp"/>
           <div id="home-title-bg-simple">
-            <img class="mx-auto" width="70%" src="./resources/svg/name.svg"/>
-            <img class="mx-auto mt-n4" width="80%" src="./resources/svg/motto.svg"/>
+            <img class="mx-auto" width="70%" src="./resources/img/name.svg"/>
+            <img class="mx-auto mt-n4" width="80%" src="./resources/img/motto.svg"/>
           </div>
         </div>
         <!-- annotation style -->
@@ -33,5 +33,5 @@
       <div class="col-12 col-md-10 mx-auto border-top section-border"></div>
     </div>
   </div>
-  <include script="./data/app-home.js"></include>
+  <include script="./resources/js/app-home.js"></include>
 </div>
