--- a/aboutme.html
+++ b/aboutme.html
@@ -1,1 +1,1 @@
-<!DOCTYPE html><html><head><script>window.location.assign(`${window.location.origin}/?aboutme`)</script></head></html>
+<!DOCTYPE html><html><head><script>window.location.assign(`${window.location.origin}?aboutme`)</script></head></html>
