--- a/resumee.html
+++ b/resumee.html
@@ -1,1 +1,1 @@
-<!DOCTYPE html><html><head><script>window.location.assign(`${window.location.origin}/?resumee`)</script></head></html>
+<!DOCTYPE html><html><head><script>window.location.assign(`${window.location.origin}?resumee`)</script></head></html>
