--- a/index.html
+++ b/index.html
@@ -1,20 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="author" content="Sergio del Pino">
-  <meta name="description" content="Personal & professional page of Sergio 'Sopze' del Pino">
-  <link rel="shortcut icon" href="./resources/img/favicon.ico" type="image/x-icon">
   <title>At Sopze's</title>
-  <!-- GOOGLE FONTS -->
+  <meta charset="UTF-8">
+  <meta name="theme-color" content="#3b41430">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Sergio 'Sopze' del Pino Proffesional Portfolio">
+  <meta name="author" content="Sergio del Pino">
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="At Sopze's">
+  <meta property="og:description" content="Sergio 'Sopze' proffesional portfolio & personal page, includes his resumee and contratable service types">
+  <meta property="og:url" content="http://www.sopze.com">
+  <meta property="og:image" content="">
+  <meta property="og:image:secure_url" content="">
+  <meta property="og:locale:alternate" content="es_ES">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:domain" content="http://www.sopze.com">
+  <meta name="twitter:site" content="@sopze92">
+  <meta name="twitter:creator" content="@sopze92">
+  <meta name="twitter:label1" content="Born">
+  <meta name="twitter:data1" content="1992">
+  <meta name="twitter:label2" content="Location">
+  <meta name="twitter:data2" content="Spain">
+  <link rel="shortcut icon" href="./resources/img/favicon.ico" type="image/x-icon">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Syne:wght@400;600;700&family=Kanit:wght@200;300;400;500;700&family=Share+Tech+Mono&display=swap" rel="stylesheet"> 
-  <!-- PAGE CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   <link rel="stylesheet" href="./resources/css/styles.css">
-  <!-- PAGE JS -->
   <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
   <script defer src="./resources/js/htmlbuilder.js"></script>
   <script defer src="./resources/js/app.js"></script>
