for real og image fixed D:

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   <meta property="og:title" content="At Sopze's">
   <meta property="og:description" content="Sergio 'Sopze' proffesional portfolio & personal page, includes his resumee and contratable service types">
   <meta property="og:url" content="http://www.sopze.com">
-  <meta property="og:image" content="https://sopze92.github.io/img/og_image.png">
-  <meta property="og:image:secure_url" content="https://sopze92.github.io/img/og_image.png">
+  <meta property="og:image" content="https://sopze92.github.io/resources/img/og_image.png">
+  <meta property="og:image:secure_url" content="https://sopze92.github.io/resources/img/og_image.png">
   <meta property="og:locale:alternate" content="es_ES">
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:domain" content="http://www.sopze.com">
