--- a/_pages/main/home/home.html
+++ b/_pages/main/home/home.html
@@ -48,5 +48,5 @@
     </div>
   </div>
   <div class="col-12 col-md-10 mx-auto border-top section-border-bottom"></div>
-  <include script="./resources/js/app-home.js"></include>
+  <include-resource mode="script" file="./pages/main/home/app-home.js"></include-resource>
 </div>
