--- a/aboutme/resumee.html
+++ b/aboutme/resumee.html
@@ -1,1 +1,3 @@
-<!DOCTYPE html><html><head><script>window.location.assign(`${window.location.origin}?resumee`)</script></head></html>
+<!DOCTYPE html><html><head><script>
+window.location.assign(`${window.location.origin}?resumee`)
+</script></head></html>
