--- a/404.html
+++ b/404.html
@@ -11,9 +11,9 @@
   <link href="https://fonts.googleapis.com/css2?family=Syne:wght@400;600;700&family=Kanit:wght@200;300;400;500;700&family=Share+Tech+Mono&display=swap" rel="stylesheet"> 
   <!-- PAGE CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-  <link rel="stylesheet" href="./resources/css/styles.css">
+  <link rel="stylesheet" href="./_resources/styles.css">
 </head>
-<body style="overflow:hidden">
+<body style="overflow:hidden;">
   <div class="container-fluid">
     <div class="row section-dark" style="height: 15vh">
     </div>
