builder full planned + almost working

--- a/_pages/main/aboutme/module.html
+++ b/_pages/main/aboutme/module.html
@@ -1,5 +1,6 @@
-<!-- TAB-HOME -->
+<!-- PAGES-ABOUTME -->
 <div class="container-fluid">
   <div class="row" >
+    PLACEHOLDER - ABOUT ME
   </div>
 </div>
