--- a/_pages/main/home/module.html
+++ b/_pages/main/home/module.html
@@ -6,22 +6,22 @@
       <div class="position-relative">
         <!-- nice title -->
         <div id="home-title" class="d-flex justify-content-center show-over-md no-select">
-          <img id="home-title-3D" src="./resources/img/title-bg.webp"/>
+          <img id="home-title-3D" src="./resources/images/title/title-bg.webp"/>
           <div id="home-title-bg">
-            <img width="60%" src="./resources/img/full-logo.svg"/>
+            <img width="60%" src="./resources/images/title/full-logo.svg"/>
           </div>
         </div>
         <!-- simple title -->
         <div id="home-title" class="d-flex justify-content-center w-100 show-until-md">
-          <img id="home-title-3D" src="./resources/img/title-bg.webp"/>
+          <img id="home-title-3D" src="./resources/images/title/title-bg.webp"/>
           <div id="home-title-bg-simple">
-            <img class="mx-auto" width="70%" src="./resources/img/name.svg"/>
-            <img class="mx-auto mt-n4" width="80%" src="./resources/img/motto.svg"/>
+            <img class="mx-auto" width="70%" src="./resources/images/title/name.svg"/>
+            <img class="mx-auto mt-n4" width="80%" src="./resources/images/title/motto.svg"/>
           </div>
         </div>
         <!-- annotation style -->
-        <img id="home-title-img-at" class="opacity-75" src="./resources/img/home_at.webp"></img>
-        <img id="home-title-img-s" class="opacity-75" src="./resources/img/home_s.webp"></img>
+        <img id="home-title-img-at" class="opacity-75" src="./resources/images/title/at.webp"></img>
+        <img id="home-title-img-s" class="opacity-75" src="./resources/images/title/s.webp"></img>
       </div>
     </div>
   </div>
@@ -43,10 +43,9 @@
   <div class="row px-0 section-medium d-flex justify-content-center overflow-hidden">
     <div class="col-12 px-0">
       <div class="m-0 p-0 position-relative wordspanner-container">
-        <img class="wordspanner" src="./resources/img/wordspanner_hr.webp"/>
+        <img class="wordspanner" bsrc-image="wordspanner"/>
       </div>
     </div>
   </div>
   <div class="col-12 col-md-10 mx-auto border-top section-border-bottom"></div>
-  <include-resource mode="script" file="./pages/main/home/app-home.js"></include-resource>
 </div>
