--- a/_pages/main/services/module.html
+++ b/_pages/main/services/module.html
@@ -1,5 +1,6 @@
-<!-- TAB-HOME -->
+<!-- PAGES-SERVICES -->
 <div class="container-fluid">
   <div class="row">
+      PLACEHOLDER - SERVICES
   </div>
 </div>
