--- a/projects/rlam.html
+++ b/projects/rlam.html
@@ -1,1 +1,1 @@
-<!DOCTYPE html><html><head><script>window.location.assign(`${window.location.origin}?project=rlam`)</script></head></html>
+<!DOCTYPE html><html><head><script>window.location.href="../../?project-rlam"</script></head></html>
