--- a/services.html
+++ b/services.html
@@ -1,1 +1,1 @@
-<!DOCTYPE html><html><head><script>window.location.assign(`${window.location.origin}?services`)</script></head></html>
+<!DOCTYPE html><html><head><script>window.location.href="../?services"</script></head></html>
